src/app/globals.css
/* ... */
.buttons .add-to-cart {
    padding: 10px 20px;
    border: 1px solid #f02d34;
    margin-top: 40px;
    font-size: 18px;
    font-weight: 500;
    background-color: white;
    color: #f02d34;
    cursor: pointer;
    width: 200px;
    transform: scale(1, 1);
    transition: transform 0.5s ease;
}

.buttons .add-to-cart:hover {
    transform: scale(1.1, 1.1)
}

.buttons .buy-now {
    width: 200px;

    padding: 10px 20px;
    background-color: #f02d34;
    color: white;
    border: none;
    margin-top: 40px;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    transform: scale(1, 1);
    transition: transform 0.5s ease;
}

.buttons .buy-now:hover {
    transform: scale(1.1, 1.1)
}

.quantity-desc {
    display: flex;
    border: 1px solid gray;
    padding-inline: 6px;
    align-items: center;
    flex-direction: row;
}

.quantity-desc span {
    font-size: 16px;
    padding: 6px 12px;
    cursor: pointer;
}

.quantity-desc .minus {
    color: #f02d34;
}

.quantity-desc .num {
    border-right: 1px solid gray;
    border-left: 1px solid gray;
    font-size: 20px;
}

.quantity-desc .plus {
    color: rgb(49, 168, 49);

}

.maylike-products-wrapper {
    margin-top: 120px;
}

.maylike-products-wrapper h2 {
    text-align: center;
    margin: 50px;
    color: #324d67;

    font-size: 28px;
}

.maylike-products-container {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-top: 20px;
}

.max-qty {
    font-weight: 500;
    color: #f02d34;
}

.success-wrapper, .cancel-wrapper {
    display: flex;
    background-color: white;
    min-height: 60vh;

}

.success, .cancel {
    width: 1000px;
    margin: 3rem auto 0;
    background-color: #dcdcdc;
    padding: 50px;
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.success .icon {
    color: green;
    font-size: 40px;
}

.success h2 {
    text-transform: capitalize;
    margin-top: 15px;
    font-weight: 900;
    font-size: 40px;
    color: #324d67;
}

.success .email-msg {
    font-size: 16px;
    font-weight: 600;
    text-align: center;
}

.cancel p {
    font-size: 20px;
    font-weight: 600;
}

.success .description {
    font-size: 16px;
    font-weight: 600;
    text-align: center;
    margin: 10px;
    margin-top: 30px;
}

.success .description .email {
    margin-left: 5px;
    color: #f02d34;
}

.product-max-qty {
    margin-top: 10px;
}

@media screen and (max-width: 800px) {
    .hero-banner-container {
        height: 560px;
    }

    .hero-banner-image {
        width: 56%;
        height: 64%;
        /* top: -2%; */
        top: 8%;
        right: 6%;
    }

    /*.footer-banner-container {*/
    /*    height: 560px;*/
    /*    margin-top: 80px;*/
    /*}*/
    .footer-banner-image {
        width: 58%;
        left: 10%;
        top: -26%;
        height: 80%;
    }

    .banner-desc .left h3 {
        font-weight: 900;
        font-size: 50px;
        margin-left: 5px;
    }

    .banner-desc .left p {
        margin: 18px;
    }

    .banner-desc .right h3 {
        font-size: 45px;
    }

    .banner-desc .right p {
        font-size: 18px;
    }

    .banner-desc .right .company-desc {
        font-size: 14px;
    }

    .banner-desc {
        flex-wrap: wrap;
        gap: 20px;
    }

    .hero-banner-container {
        line-height: 1.3;
    }

    .hero-banner-container h1 {
        font-size: 95px;
        margin-top: -10px;
        /*font-size: 50px;*/
    }

    .hero-banner-container h3 {
        font-size: 40px;
    }

    .hero-banner-container button {
        margin-top: 90px;
        z-index: 10000;
    }

    .desc {
        bottom: 60px;
    }

    .product-detail-container {
        flex-wrap: wrap;
    }

    .product-detail-container .product-detail-image {
        width: 350px;
        height: 350px;
    }

    .cart-container {
        width: 415px;
        padding: 4px;
    }

    .cart-heading {
        margin-top: 35px;
    }

    .product-container {
        margin-top: 10px;
    }

    .product {
        padding: 20px 5px;

    }

    .product .cart-product-image {
        width: 25%;
        height: 25%;
    }

    .buttons .add-to-cart {
        width: 150px;
    }

    .buttons .buy-now {
        width: 150px;
    }

    .product-detail-container {
        margin: 20px;
    }

    .item-desc .flex {
        width: 200px;
    }

    .top {
        flex-wrap: wrap;
        gap: 10px;


    }

    .item-desc .bottom {
        margin-top: 30px;
    }

    .flex h5 {
        font-size: 16px;
        color: #324d67;
    }

    .flex h4 {
        font-size: 16px;
        color: black;
    }

    .cart-bottom {
        padding: 30px;
    }

    .total h3 {
        font-size: 20px;
    }

    .track {
        animation: marquee 10s linear infinite;
        width: 550%;
    }

    .success-wrapper, .cancel-wrapper {
        min-height: 69vh;
    }

    .success, .cancel {
        width: 370px;
        margin-top: 100px;
        padding: 20px;
    }

    .success {
        height: 350px;
    }

    .success h2 {
        font-size: 17px;
    }

    .btn-container {
        width: 300px;
        margin: auto;
    }
}

@media (max-width: 600px) {
    .hero-banner-image {
        width: 60%;
        height: 50%;
        top: 14%;
        right: 4%;
        object-fit: contain;
    }

    .footer-banner-image {
        width: 77%;
        left: 30%;
        top: 6%;
        height: 56%;
        object-fit: contain;
    }

    .hero-banner-container h1 {
        font-size: 80px;
        margin-left: -10px;
    }

    .hero-banner-container h3 {
        font-size: 50px;
    }

    .footer-banner-container {
        height: 600px;
        margin-top: 80px;
    }

    .cart-bottom .btn-container {
        display: flex;
        width: 100%;
        flex-direction: column;
        align-items: center;
    }

    .cart-container {
        width: 100%;
        height: 100%;
    }
}
/* ... */

